--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,10 @@
 <nav class="nav-content">
-    <img class="nav-logo" [src]="logo" alt="logotipo">
-    <ul class="nav-list">
-      <li class="nav-item"><a class="nav-link" routerLinkActive="active-route" routerLink="/home">Home</a></li>
-      <li class="nav-item"><a class="nav-link" routerLinkActive="active-route" routerLink="/tags">Tags</a></li>
-      <li class="nav-item"><a class="nav-link" routerLinkActive="active-route" routerLink="/about">About</a></li>
-    </ul>
-  </nav>
+  <img class="nav-logo" [src]="logo" alt="logotipo" routerLink="/home"/>
+  <ul class="nav-list">
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active-route" routerLink="/home"
+        >Home</a
+      >
+    </li>
+  </ul>
+</nav>
