--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,5 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Libre Baskerville', serif;
-    background-color: #F8F8F8;
+    background-color: #FFF;
 }
